--- a/app/src/main/res/menu/menu_items.xml
+++ b/app/src/main/res/menu/menu_items.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:compat="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
-        android:id="@+id/action_remove"
+        android:id="@+id/settings_item"
         android:title="@string/settings"
         android:icon="@drawable/ic_settings_24dp"
-        app:showAsAction="always" />
+        compat:showAsAction="always"
+        tools:ignore="AppCompatResource"/>
 </menu>
