--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.settings.SettingsFragment">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/open_about_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
